<resources>
    <string name="app_name" translatable="false">Sample App</string>
    <string name="title_input">Input</string>
    <string name="title_display">Output</string>
    <string name="title_web_service">WebService</string>
    <string name="title_settings">Settings</string>

    <!-- Input screen -->
    <string name="input_header">Person data</string>
    <string name="input_text_hint_first_name">First name</string>
    <string name="input_text_hint_last_name">Last name</string>
    <string name="input_text_hint_zip_code">Zip code</string>
    <string name="input_text_error_first_name">Enter first name</string>
    <string name="input_text_error_last_name">Enter last name</string>
    <string name="input_text_error_zip_code_missing">Enter zip code</string>
    <string name="input_text_error_zip_code_too_short">Zip code too short</string>
    <string name="input_text_error_zip_code_too_long">Zip code too long</string>
    <string name="input_text_error_zip_code_not_existing">Zip code does not exist</string>
    <string name="input_button_title_save">Save</string>
    <string name="input_snackbar_save_successful">Saving successful!</string>
    <string name="input_snackbar_save_failed">Saving failed!</string>


    <!-- Output screen -->
    <string name="output_item_person_label_frist_name">First name:</string>
    <string name="output_item_person_label_last_name">Last name:</string>
    <string name="output_item_person_label_zip_code">Zip code:</string>
    <string name="output_list_header">Person data</string>
    <string name="output_list_empty_label">Empty \n :\'(</string>


    <!-- Web service screen -->
    <string name="web_service_list_header">Online posts</string>
    <string name="web_service_empty_test">Empty \n :\'(</string>
    <string name="web_service_loading_error_snackbar_no_internet">Loading error: Check connection.</string>
    <string name="web_service_loading_error_snackbar_sslv3">Loading error: Please install GooglePlayServices!</string>
    <string name="web_service_loading_error_snackbar_other">Loading error.</string>

    <!--Setting screen -->
    <string name="setting_auto_update_headline">Update settings</string>
    <string name="setting_auto_update_activation_label">Auto update</string>
    <string name="setting_auto_update_interval_label">Auto update interval</string>
    <string name="setting_auto_update_interval">%1d min.</string>
    <string name="setting_others_headline">Other settings</string>
    <string name="setting_others_change_background_label">Change background</string>
    <string name="setting_snackbar_background_change_successful">Background successfully changed!</string>
    <string name="setting_snackbar_background_change_failed">Background change failed!</string>

</resources>
